Incomplete (#7)
* incomplete docs

* ability to change complete todo to incomplete
